<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/snowy_mountain4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:fontFamily="casual"
        android:text="@string/go_snow_glencoe_heading"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/saltire2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/heading"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <TextView
        android:id="@+id/accessSnowHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="casual"
        android:text="@string/base_snow_depth_headin_ma"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempJson" />

    <TextView
        android:id="@+id/accessDepthHeading"
        android:layout_width="99dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="casual"
        android:text="@string/access_depth_json_ma"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accessSnowHeading" />

    <TextView
        android:id="@+id/topSnowHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:fontFamily="casual"
        android:text="@string/top_snow_depth_heading_ma"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempJson" />

    <TextView
        android:id="@+id/tempJson"
        android:layout_width="167dp"
        android:layout_height="110dp"
        android:layout_marginTop="5dp"
        android:fontFamily="casual"
        android:text="@string/main_temp_json_ma"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="90sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView" />

    <TextView
        android:id="@+id/topDepthHeading"
        android:layout_width="99dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:fontFamily="casual"
        android:text="@string/top_depth_json_ma"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topSnowHeading" />

    <LinearLayout
        android:id="@+id/topClickImageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topDepthHeading"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/snowReportClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3CF1EBF1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="goToSnowReport"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:id="@+id/snowImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="goToSnowReport"
                android:src="@drawable/blizzard"
                app:tint="#FFFFFF"
                android:contentDescription="@string/snowfall_cloud"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/snow"
                android:textColor="#673AB7"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/report"
                android:textColor="#673AB7"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/snowSportsClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3CF1EBF1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="goToSnowSports"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:id="@+id/sportImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="goToSnowSports"
                android:src="@drawable/skier"
                android:contentDescription="@string/sport_image"
                app:tint="#FFFFFF" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/snow"
                android:textColor="#673AB7"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/sports"
                android:textColor="#673AB7"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/snpwChatClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3CF1EBF1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="goToSnowChat"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:id="@+id/chatImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/chat_image"
                app:srcCompat="@drawable/ic_chat_black_24dp"
                app:tint="#FFFFFF" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/snow"
                android:textColor="#673AB7"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/chat"
                android:textColor="#673AB7"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomClickImageLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/bottomClickImageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/resortClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3CF1EBF1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="goToResortInfo"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:id="@+id/resortImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/glencoe"
                android:contentDescription="@string/resort_image"
                app:tint="#FFFFFF" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/resort"
                android:textColor="#673AB7"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/info"
                android:textColor="#673AB7"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/businessClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3CF1EBF1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="goToBusinesses"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:id="@+id/localImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:tint="#FFFFFF"
                android:contentDescription="@string/local_business_image"
                app:srcCompat="@drawable/food_drink" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/local"
                android:textColor="#673AB7"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/business"
                android:textColor="#673AB7"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/directionsClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#27F1EBF1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="goToDirections"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:id="@+id/directionsImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:tint="#FFFFFF"
                android:contentDescription="@string/google_maps_image"
                app:srcCompat="@drawable/directions" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/google_maps"
                android:textColor="#673AB7"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/directions"
                android:textColor="#673AB7"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>